# AI-Applications

./: .gitignore  main.py  pyproject.toml
chatbot-eval/: chat.py  evaluate.py  guardrails.py
chatbot-memory/: app.py  chat.py  memory.py
rag-advanced/: ingest.py  qa.py  retriever.py
rag-basics/: ingest.py  qa.py  retriever.py
